crates/cribo/tests/snapshots/execution_results@type_checking_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/type_checking_imports/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Processed: test",
    stderr: "",
}
