crates/cribo/tests/snapshots/execution_results@version_import_complex.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/version_import_complex/main.py
---
ExecutionResults {
    status: Success,
    stdout: "User agent: mypackage/2.0.0\nPackage version: 2.0.0",
    stderr: "",
}
