crates/cribo/tests/snapshots/execution_results@wildcard_all_setattr.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wildcard_all_setattr/main.py
---
ExecutionResults {
    status: Success,
    stdout: "MyClass instance value: from module_a\nmy_function result: from module_b\nSuccess!",
    stderr: "",
}
