crates/cribo/tests/snapshots/execution_results@wildcard_all_tuple.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wildcard_all_tuple/main.py
---
ExecutionResults {
    status: Success,
    stdout: "used from tuple __all__",
    stderr: "",
}
