crates/cribo/tests/snapshots/execution_results@wrapper_module_builtin_types.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_wrapper_module_builtin_types/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 27, in <module>",
}
